<resources>
    <string name="app_name">QuanLyGuiXe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_home_title">Trang chủ</string>
    <string name="nav_list_employee_title">Nhân viên</string>
    <string name="nav_list_shift_manager_title">Ca trực</string>
    <string name="nav_list_ticket_title">Vé xe</string>
    <string name="nav_list_parking_lots_title">Bãi đỗ xe</string>
    <string name="nav_reports_detail_title">Báo cáo doanh thu\n</string>
    <string name="text_temp_ticket_id">Mã vé: %1$d</string>
    <string name="text_temp_ticket_type">Loại vé: %1$s</string>
    <string name="text_temp_ticket_price">Giá bán: %1$s Đồng</string>
    <string name="text_temp_ticket_expiration_date">Hạn sử dụng: %1$s</string>
    <string name="text_temp_empty_ticket">Không có loại vé nào!!</string>
    <string name="text_content_description_add_ticket">Thêm vé</string>
    <string name="text_temp_input_ticket_type">Loại vé</string>
    <string name="text_temp_input_ticket_price">Giá bán</string>
    <string name="text_input_ticket_expiration_date">Hạn sử dụng</string>
    <string name="text_button_add_ticket">Thêm vé</string>
    <string name="text_clear_all_info">Xóa dữ liệu</string>
    <string name="text_required">Bắt buộc</string>
    <string name="button_update_ticket">Sửa vé</string>
    <string name="text_input_employee_name">Họ và tên</string>
    <string name="text_input_employee_date_of_birth">Ngày sinh</string>
    <string name="text_input_employee_number_phone">Số điện thoại</string>
    <string name="text_input_employee_email">Email</string>
    <string name="text_button_add_nhanvien">Thêm nhân viên</string>
    <string name="text_button_update_nhanvien">Sửa nhân viên</string>
    <string name="button_upload_image">Tải ảnh lên</string>
    <string name="text_employee_id_title">Mã nhân viên: %1$d</string>
    <string name="text_employee_name_title">Tên nhân viên: %1$s</string>
    <string name="text_employee_date_of_birth">Ngày sinh: %1$s</string>
    <string name="text_employee_phone_number">SĐT: %1$s</string>
    <string name="text_employee_email">Email: %1$s</string>
    <string name="title_report">Báo cáo theo:</string>
    <string name="selected_month">Chọn Tháng</string>
    <string name="year">Năm</string>
    <string name="selected_year">Chọn năm</string>
    <string name="day">Ngày</string>
    <string name="selected_day">Chọn ngày</string>
    <string name="month">Tháng</string>
    <string name="titile_revenue">Tổng doanh thu:</string>
    <string name="day_ticket_sold">Số vé ngày đã bán:</string>
    <string name="text_vehicle_amount">Số lượng xe gửi:</string>
    <string name="text_month_ticket_sold">Số lượng vé tháng đã bán:</string>
    <string name="year_ticket_sold">Số lượng vé năm đã bán</string>
    <string name="text_temp_empty_parking_lot">Nhà xe trống!!</string>
    <string name="text_temp_parking_lot_id">ID Nhà xe: %1$d</string>
    <string name="text_temp_parking_lot_name">Tên nhà xe: %1$s</string>
    <string name="text_button_update_parking_lot">Sửa nhà xe</string>
    <string name="text_button_add_parking_lot">Thêm nhà xe</string>
    <string name="text_temp_input_parking_lot_name">Tên nhà xe</string>
    <string name="text_temp_parking_slot_available">Sỗ chỗ còn: %1$d</string>
    <string name="text_temp_parking_slot_max">Tối đa: %1$d xe</string>
    <string name="text_content_description_add_parking_lot">Thêm nhà xe</string>
    <string name="text_temp_input_parking_slot_max">Số vị trí tối đa</string>
    <string name="nav_check_in_out_vehicle_title">Xe ra/vào</string>
    <string name="nav_check_in_vehicle_title">Xe vào</string>
    <string name="nav_check_out_vehicle_title">Xe ra</string>
    <string name="text_checkin_vehicle">Xác nhận xe vào</string>
    <string name="text_vehicle_number">Biển số xe: %1$s</string>
    <string name="text_vehicle_owner">Khách hàng: %1$s</string>
    <string name="text_vehicle_ticket_type">Loại vé: %1$s</string>
    <string name="text_vehicle_time_in">Thời gian vào: %1$s</string>
</resources>
