<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nhom3.quanlyguixe.screens.main.home.HomeFragment"
        android:label="@string/nav_home_title"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_list_employee"
            app:destination="@id/nav_list_employee" />
        <action
            android:id="@+id/action_nav_home_to_nav_list_shift_manager"
            app:destination="@id/nav_list_shift_manager" />
        <action
            android:id="@+id/action_nav_home_to_nav_list_tickets"
            app:destination="@id/nav_list_tickets" />
        <action
            android:id="@+id/action_nav_home_to_nav_list_parking_lots"
            app:destination="@id/nav_list_parking_lots" />
        <action
            android:id="@+id/action_nav_home_to_nav_reports_detail"
            app:destination="@id/nav_reports_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_list_employee"
        android:name="com.nhom3.quanlyguixe.screens.employees.ListEmployeeFragment"
        android:label="@string/nav_list_employee_title"
        tools:layout="@layout/fragment_list_employee" />

    <fragment
        android:id="@+id/nav_list_shift_manager"
        android:name="com.nhom3.quanlyguixe.screens.shiftmanager.ListShiftManagerFragment"
        android:label="@string/nav_list_shift_manager_title"
        tools:layout="@layout/fragment_list_shift_manager" />

    <fragment
        android:id="@+id/nav_list_tickets"
        android:name="com.nhom3.quanlyguixe.screens.tickets.ListTicketFragment"
        android:label="@string/nav_list_ticket_title"
        tools:layout="@layout/fragment_list_tickets" >

        <action
            android:id="@+id/action_nav_list_tickets_to_nav_add_update_tickets"
            app:destination="@id/nav_add_update_tickets" />
    </fragment>

    <fragment
        android:id="@+id/nav_list_parking_lots"
        android:name="com.nhom3.quanlyguixe.screens.parkinglots.ListParkingLotsFragment"
        android:label="@string/nav_list_parking_lots_title"
        tools:layout="@layout/fragment_list_parking_lots" />

    <fragment
        android:id="@+id/nav_reports_detail"
        android:name="com.nhom3.quanlyguixe.screens.reports.ReportDetailFragment"
        android:label="@string/nav_reports_detail_title"
        tools:layout="@layout/fragment_report_detail" />

    <fragment
        android:id="@+id/nav_add_update_tickets"
        android:name="com.nhom3.quanlyguixe.screens.tickets.AddUpdateTicketFragment"
        tools:layout="@layout/fragment_add_update_ticket"
        android:label="Thêm vé xe" />
</navigation>