<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/dp_20"
    android:layout_margin="@dimen/dp_10"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_20">

        <CheckBox
            android:id="@+id/checkbox_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Checkout"/>

        <TextView
            android:id="@+id/text_vehicle_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_checkout"
            tools:text="@string/text_vehicle_number"/>

        <TextView
            android:id="@+id/text_vehicle_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_vehicle_number"
            android:layout_marginTop="@dimen/dp_10"
            tools:text="@string/text_vehicle_owner"/>

        <TextView
            android:id="@+id/text_vehicle_time_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_vehicle_owner"
            android:layout_marginTop="@dimen/dp_10"
            tools:text="@string/text_vehicle_time_in"/>

        <TextView
            android:id="@+id/text_vehicle_ticket_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_vehicle_time_in"
            android:layout_marginTop="@dimen/dp_10"
            tools:text="@string/text_vehicle_ticket_type"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>