<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_employee_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperTextEnabled="true"
            app:helperText="@string/text_required"
            app:helperTextTextColor="@color/color_red"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/text_input_employee_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_employee_date_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:clickable="true"
            app:helperTextEnabled="true"
            app:helperText="@string/text_required"
            android:hint="@string/text_input_employee_date_of_birth"
            app:helperTextTextColor="@color/color_red"
            app:layout_constraintEnd_toEndOf="@id/text_input_employee_name"
            app:layout_constraintStart_toStartOf="@id/text_input_employee_name"
            app:layout_constraintTop_toBottomOf="@id/text_input_employee_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_employee_number_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            app:helperTextEnabled="true"
            app:helperText="@string/text_required"
            android:hint="@string/text_input_employee_number_phone"
            app:helperTextTextColor="@color/color_red"
            app:layout_constraintEnd_toEndOf="@id/text_input_employee_date_of_birth"
            app:layout_constraintStart_toStartOf="@id/text_input_employee_date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/text_input_employee_date_of_birth">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_employee_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            app:helperTextEnabled="true"
            app:helperText="@string/text_required"
            android:hint="@string/text_input_employee_email"
            app:helperTextTextColor="@color/color_red"
            app:layout_constraintEnd_toEndOf="@id/text_input_employee_number_phone"
            app:layout_constraintStart_toStartOf="@id/text_input_employee_number_phone"
            app:layout_constraintTop_toBottomOf="@id/text_input_employee_number_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_employee"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/dp_16"
            app:cardCornerRadius="@dimen/dp_16"
            app:layout_constraintBottom_toTopOf="@id/button_add_update_employee"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintEnd_toEndOf="@id/text_input_employee_name"
            app:layout_constraintStart_toStartOf="@id/text_input_employee_name"
            app:layout_constraintTop_toBottomOf="@id/text_input_employee_email">

            <ImageView
                android:id="@+id/image_employee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_employee" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_add_update_employee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/text_button_add_nhanvien"
            app:layout_constraintEnd_toEndOf="@+id/text_input_employee_email"
            app:layout_constraintStart_toStartOf="@+id/text_input_employee_email"
            app:layout_constraintTop_toBottomOf="@id/layout_employee" />

        <Button
            android:id="@+id/button_upload_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/button_upload_image"
            app:layout_constraintEnd_toEndOf="@+id/text_input_employee_email"
            app:layout_constraintStart_toStartOf="@+id/text_input_employee_email"
            app:layout_constraintTop_toBottomOf="@id/button_add_update_employee" />

        <Button
            android:id="@+id/button_clear_all_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/text_clear_all_info"
            app:layout_constraintEnd_toEndOf="@+id/text_input_employee_email"
            app:layout_constraintStart_toStartOf="@+id/text_input_employee_email"
            app:layout_constraintTop_toBottomOf="@id/button_upload_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>