<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/dp_20"
    android:elevation="@dimen/dp_20"
    android:layout_margin="@dimen/dp_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_employee_image"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            app:cardCornerRadius="@dimen/dp_30"
            android:src="@drawable/ic_employee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20">

            <ImageView
                android:id="@+id/image_employee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_employee"
                android:scaleType="fitCenter"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_employee_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/layout_employee_image"
            app:layout_constraintTop_toTopOf="@id/layout_employee_image"
            app:layout_constraintEnd_toStartOf="@id/button_update_ticket"
            android:layout_marginStart="@dimen/dp_15"
            android:textStyle="bold"
            tools:text="@string/text_employee_id_title" />

        <TextView
            android:id="@+id/text_employee_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_employee_id"
            app:layout_constraintTop_toBottomOf="@id/text_employee_id"
            app:layout_constraintEnd_toStartOf="@id/button_update_ticket"
            android:layout_marginTop="@dimen/dp_5"
            tools:text="@string/text_employee_name_title" />

        <TextView
            android:id="@+id/text_employee_date_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_employee_name"
            app:layout_constraintTop_toBottomOf="@id/text_employee_name"
            app:layout_constraintEnd_toStartOf="@id/button_update_ticket"
            android:layout_marginTop="@dimen/dp_5"
            tools:text="@string/text_employee_date_of_birth" />

        <TextView
            android:id="@+id/text_employee_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_employee_date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/text_employee_date_of_birth"
            app:layout_constraintEnd_toStartOf="@id/button_update_ticket"
            android:layout_marginTop="@dimen/dp_5"
            tools:text="@string/text_employee_phone_number" />

        <TextView
            android:id="@+id/text_employee_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_employee_phone_number"
            app:layout_constraintTop_toBottomOf="@id/text_employee_phone_number"
            app:layout_constraintEnd_toStartOf="@id/button_update_ticket"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_20"
            tools:text="@string/text_employee_email" />

        <ImageButton
            android:id="@+id/button_update_ticket"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:background="@color/color_transparent"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_employee_id"
            android:layout_marginEnd="@dimen/dp_15"/>

        <ImageButton
            android:id="@+id/button_delete_ticket"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:background="@color/color_transparent"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/text_employee_email"
            android:layout_marginEnd="@dimen/dp_15"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>