<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="@dimen/dp_20"
    android:elevation="@dimen/dp_20"
    android:layout_margin="@dimen/dp_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_single_car"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            android:src="@drawable/ic_single_car_selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20" />

        <TextView
            android:id="@+id/text_parking_lot_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/image_single_car"
            app:layout_constraintTop_toTopOf="@id/image_single_car"
            app:layout_constraintEnd_toStartOf="@id/button_update_parking_lot"
            android:layout_marginStart="@dimen/dp_15"
            android:textStyle="bold"
            tools:text="@string/text_temp_parking_lot_id" />

        <TextView
            android:id="@+id/text_parking_lot_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_parking_lot_id"
            app:layout_constraintTop_toBottomOf="@id/text_parking_lot_id"
            app:layout_constraintEnd_toStartOf="@id/button_update_parking_lot"
            android:layout_marginTop="@dimen/dp_5"
            tools:text="@string/text_temp_parking_lot_name" />

        <TextView
            android:id="@+id/text_parking_slot_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_parking_lot_name"
            app:layout_constraintTop_toBottomOf="@id/text_parking_lot_name"
            app:layout_constraintEnd_toStartOf="@id/button_update_parking_lot"
            android:layout_marginTop="@dimen/dp_5"
            tools:text="@string/text_temp_parking_slot_available" />

        <TextView
            android:id="@+id/text_parking_slot_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/text_parking_slot_available"
            app:layout_constraintTop_toBottomOf="@id/text_parking_slot_available"
            app:layout_constraintEnd_toStartOf="@id/button_update_parking_lot"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_20"
            tools:text="@string/text_temp_parking_slot_max" />

        <ImageButton
            android:id="@+id/button_update_parking_lot"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:background="@color/color_transparent"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_parking_lot_id"
            android:layout_marginEnd="@dimen/dp_15"/>

        <ImageButton
            android:id="@+id/button_delete_parking_lot"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:background="@color/color_transparent"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/text_parking_slot_max"
            android:layout_marginEnd="@dimen/dp_15"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
