<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="Tên khách hàng"
        app:errorEnabled="true"
        app:helperText="@string/text_required"
        app:helperTextTextColor="@color/color_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_vehicle_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:hint="Biển số"
        app:errorEnabled="true"
        app:helperText="@string/text_required"
        app:helperTextTextColor="@color/color_red"
        app:layout_constraintEnd_toEndOf="@id/text_input_customer_name"
        app:layout_constraintStart_toStartOf="@id/text_input_customer_name"
        app:layout_constraintTop_toBottomOf="@id/text_input_customer_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_date_check_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:clickable="true"
        android:hint="Ngày vào"
        app:errorEnabled="true"
        app:helperText="@string/text_required"
        app:helperTextTextColor="@color/color_red"
        app:layout_constraintEnd_toEndOf="@id/text_input_vehicle_number"
        app:layout_constraintStart_toStartOf="@id/text_input_vehicle_number"
        app:layout_constraintTop_toBottomOf="@id/text_input_vehicle_number">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_time_check_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:clickable="true"
        android:hint="Giờ vào"
        app:errorEnabled="true"
        app:helperText="@string/text_required"
        app:helperTextTextColor="@color/color_red"
        app:layout_constraintEnd_toEndOf="@id/text_input_date_check_in"
        app:layout_constraintStart_toStartOf="@id/text_input_date_check_in"
        app:layout_constraintTop_toBottomOf="@id/text_input_date_check_in">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner_input_ticket_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:clickable="true"
        android:hint="Loại vé"
        app:errorEnabled="true"
        app:helperText="@string/text_required"
        app:helperTextTextColor="@color/color_red"
        app:layout_constraintEnd_toEndOf="@id/text_input_time_check_in"
        app:layout_constraintStart_toStartOf="@id/text_input_time_check_in"
        app:layout_constraintTop_toBottomOf="@id/text_input_time_check_in">

        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add_vehicle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/text_checkin_vehicle"
        app:layout_constraintBottom_toTopOf="@id/button_clear_all_info"
        app:layout_constraintEnd_toEndOf="@id/spinner_input_ticket_type"
        app:layout_constraintStart_toStartOf="@id/spinner_input_ticket_type" />

    <Button
        android:id="@+id/button_clear_all_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/text_clear_all_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/spinner_input_ticket_type"
        app:layout_constraintStart_toStartOf="@id/spinner_input_ticket_type" />
</androidx.constraintlayout.widget.ConstraintLayout>